
- Added some automated checks of package build tree configurations that get
  invoked in asim-shell upon:
  + startup
  + checkout or update of packages
  + manually configuring packages
  + adding public or other packages
  The checks are disabled in batch mode.  They can also be explicitly
  disabled using a new command line switch --noconfigcheck

  This check should catch the most common configuration mismatches, e.g.
  checking out different packages on different host architectures, or
  inconsistent 32/64-bit build settings.

----------
spartha1    Date: Mon Dec 29 13:14:34 EST 2008  CSN: CSN-asimcore-279
                  Mon Dec 29 18:14:34 UTC 2008


Directory tools/scripts
 asimstarter.in            Locally Modified          278 

Updating with simcore changes (rev. 2656 - Carl Beckmann)

- fixed a bug that was preventing asimstarter from launching foreign programs

----------
spartha1    Date: Mon Dec 29 13:16:14 EST 2008  CSN: CSN-asimcore-280
                  Mon Dec 29 18:16:14 UTC 2008


Directory tools/scripts
 asimstarter.in            Locally Modified          279 

Updating with simcore changes (rev. 2657 - Carl Beckmann)

- Fixed a bug introduced in last commit which broke "asimstarter -- program" usage

- Also added the ability to use absolute, relative, and union-directory-relative paths for "program" in the "asimstarter program" and "asimstarter -- program" usages.

----------
spartha1    Date: Mon Dec 29 13:18:21 EST 2008  CSN: CSN-asimcore-281
                  Mon Dec 29 18:18:21 UTC 2008


Directory tools/scripts
 asim-run                  Locally Modified          280 

Updating with simcore changes (rev. 2661 - Carl Beckmann)

- Asim-run now recognized both syntaxes:
     -param LIMIT_PTHREADS=4
  and
     -limit_pthreads 4
  when deciding whether to launch a netbatch job as a parallel job.
  Also, fixed a bug in scanning model arguments (previously it was only
  able to detect parallel jobs from parameters in the .apm file)